kubernetes-demo/sample_service/K8s-Demo/kubernetes/k8s_demo_service/vehicle-telemetry-v1/templates/k8s_demo_service_deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "k8s_demo_service"
  name: "vehicle-telemetry-v2"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "k8s_demo_service"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "index.docker.io/wso2am/vehicle-telemetry:v2.0"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 9090
        name: "vehicle-telemetry-v2"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
