kubernetes-demo/sample_service/K8s-Demo/kubernetes/k8s_demo_service/vehicle-telemetry-v1/templates/k8s_demo_service_ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "k8s_demo_service"
  name: "vehicle-telemetry-v2"
  ownerReferences: []
spec:
  rules:
  - host: "vehicle-telemetry-v2"
    http:
      paths:
      - backend:
          serviceName: "vehicle-telemetry-v2"
          servicePort: 9090
        path: "/"
  tls: []
